# rust_foo

./: Makefile  foo  foo.h  main.c
rust/: Cargo.toml  build.rs  cbindgen.toml  rust_cbindgen.h  rustfmt.toml
rust/src/: bindings.rs  lib.rs
rust/src/protocols/: foo.rs
