[package]
name = "rust_foo"
version = "0.0.1"
edition = '2018'
publish = false
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[profile.dev]
debug = true
panic = 'abort'
lto = true

[profile.release]
debug = true
panic = 'abort'
lto = true

[build-dependencies]
bindgen = "^0.55"
cbindgen = "^0"

[dependencies]
libc = { version = "0.2", default-features = false }
